fix font resizing on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,7 @@
+html{
+  font-size: 100%;
+}
+
 
 .noselect {
   -webkit-touch-callout: none;//iOS Safari
@@ -84,7 +88,7 @@ header {
     border: 2px solid white;
     border-radius: 2px;
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5em;;
     cursor: pointer;
   }
   #nav-hidden{
